[package]
name = "cargo-fill"
edition = "2021"
version = "0.2.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "An interactive CLI tool for filling the fields of `Cargo.toml` quickly."
documentation = "https://docs.rs/cargo-fill"
readme = "README.md"
keywords = ["fill", "manifest", "productivity"]
license = "MIT OR Apache-2.0"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
]
repository = "https://github.com/JohnScience/cargo-fill"

[dependencies]
cargo_toml = "0.16"
crossbeam = "0.8"
promptly = "0.3"
smallstr = "0.3"
toml = "0.8"
const_format = "0.2"
